Configure massive switch

--- a/bundles/system/debug/theme.css
+++ b/bundles/system/debug/theme.css
@@ -136,6 +136,10 @@ h4 {
 .class 		{	color: darkred;		}
 .line 		{	color: purple;		}
 
+.invisibles {
+	color: gray; padding: 0 2px;
+}
+
 .selected {
 	padding: 2px 4px;
 	border-radius: 4px;
