--- a/bundles/system/debug/theme.css
+++ b/bundles/system/debug/theme.css
@@ -15,13 +15,14 @@ body > h1 {
 	text-shadow: 2px 2px 1px #000;
 	padding: 30px;
 }
-body > h1 > a, body > h1 > span {
+body > h1 > a:link, body > h1 > a, body > h1 > span {
 	color: #fff;
 	text-decoration: none;
 	border: 2px solid transparent;
 	border-radius: 4px;
 	padding: 4px;
 	margin: -4px 0;
+	background: none;
 }
 body > h1 > a:hover {
 	background: #555;
