--- a/bundles/debug/theme.css
+++ b/bundles/debug/theme.css
@@ -196,6 +196,18 @@ body._e_dump > h1 {
 	vertical-align: top;
 }
 
+/* General Styles */
+._e_dump div.section table.style {
+	border-collapse: collapse;
+}
+._e_dump div.section table.style th, ._e_dump div.section table.style td {
+	border: 1px solid #888;
+	padding: 5px 7px;
+}
+._e_dump div.section table.style th {
+	background: #ddd;
+}
+
 /* Dump Styles */
 ._e_dump table.dump {
 	border-collapse: collapse;
